- Added fixed height to checkbox and radio wrapper classes to account for pseudo input height. Adjusted margin-bottom of inputs and vertical-align of label to account for the new fixed height

--- a/example/scss/components/_components.forms-checkboxes-radios.scss
+++ b/example/scss/components/_components.forms-checkboxes-radios.scss
@@ -8,8 +8,9 @@
 
 .example .dcf-input-checkbox,
 .example .dcf-input-radio {
-  @include mb-2;
-  @include pl-6;
+  @include mb-1;
+  @include pl-6
+  height: $length-em-6;
   position: relative;
 }
 
@@ -33,6 +34,7 @@
   cursor: pointer;
   @include ml-2;
   touch-action: manipulation;
+  vertical-align: text-top;
 }
 
 
